RESOLVED FIXED167902
[Mac] Web Automation: NSEventType not initialized in WebAutomationSession::platformSimulateMouseInteraction
https://bugs.webkit.org/show_bug.cgi?id=167902
Summary [Mac] Web Automation: NSEventType not initialized in WebAutomationSession::pl...
Blaze Burg
Reported 2017-02-06 13:19:49 PST
Oops.
Attachments
Proposed Fix (4.66 KB, patch)
2017-02-06 13:43 PST, Blaze Burg
no flags
Blaze Burg
Comment 1 2017-02-06 13:43:41 PST
Created attachment 300753 [details] Proposed Fix
Joseph Pecoraro
Comment 2 2017-02-07 12:42:34 PST
Comment on attachment 300753 [details] Proposed Fix r=me
WebKit Commit Bot
Comment 3 2017-02-07 12:46:20 PST
Comment on attachment 300753 [details] Proposed Fix Clearing flags on attachment: 300753 Committed r211831: <http://trac.webkit.org/changeset/211831>
WebKit Commit Bot
Comment 4 2017-02-07 12:46:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.