[Mac] Web Automation: NSEventType not initialized in WebAutomationSession::platformSimulateMouseInteraction https://bugs.webkit.org/show_bug.cgi?id=167902

Reviewed by Joseph Pecoraro.

* UIProcess/Automation/mac/WebAutomationSessionMac.mm:
(WebKit::WebAutomationSession::platformSimulateMouseInteraction):
Initialize these to 0, which is not a valid NSEventType. Assert that
each NSEventType has a valid value before attempting to use it.


Canonical link: https://commits.webkit.org/184980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211831 268f45cc-cd09-0410-ab3c-d52691b4dbfc